deployment/sandbox/kubernetes/commons/config-server-deployment-and-service.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kernel-config-server
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kernel-config-server
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1 
  template:
    metadata:
      labels:
        app: kernel-config-server
    spec:
      containers:
      - name: kernel-config-server
        image: kernel-config-server
        ports:
        - containerPort: 51000
        volumeMounts:
        - name: redis-storage
          mountPath: /data/config
        imagePullPolicy: Never
      # imagePullSecrets:
      # - name: pvt-reg-cred
      volumes:
      - name: redis-storage
        hostPath:
          path: "<hostPath>/config-properties"
          # path: /home/madmin/Desktop/ansible/mosip-config-mt/config
---
apiVersion: v1
kind: Service
metadata:
  name: kernel-config-server
  namespace: default
spec:
  ports:
    - port: 51000
  selector:
    app: kernel-config-server
  type: NodePort
